feat: skrevet ferdig shippable produkt Co-authored-by: Rockne <Rockne@users.noreply.github.com> Co-authored-by: larfur <larfur@users.noreply.github.com> Co-authored-by: halsetonje <halsetonje@users.noreply.github.com>